Saving image using uuid name and updating swagger
